tests/cases/semantics/defs/naming_conventions.stderr
error: mismatching naming convention of fields within a struct
 --> $DIR/naming_conventions.hash:5:5
4 |       arg,
5 |       max: i32,
  |       ^^^^^^^^ this is expected to be a un-named field
6 |   )
  = note: fields of a struct should all be named or all un-named

error: mismatching naming convention of fields within a enum variant
  --> $DIR/naming_conventions.hash:30:9
29 |           // ~ERROR: fields are expected to be named or all un-named.
30 |           max,
   |           ^^^ this is expected to be a named field
31 |       ),
   = note: fields of a enum variant should all be named or all un-named
