tests/cases/semantics/defs/naming_conventions.hash
// run=fail, stage=semantic
Boo := struct(
    // ~ERROR: fields are expected to be named or all un-named.
    arg,
    max: i32,
)

Moo := struct(
    arg,
    max,
)

Foo := struct(
    bax: i32,
    max: i32,
)

Mux := enum(
    Crux(
        bax: i32,
        max: i32,
    ),
    Tux(
        bax,
        max,
    ),
    Lux(
        bax: i32,
        // ~ERROR: fields are expected to be named or all un-named.
        max,
    ),
)
